fix release typo

--- a/releases/v0.1.0.md
+++ b/releases/v0.1.0.md
@@ -2,6 +2,6 @@
 
 ## Description
 
-This is the initial release of the mavlink log crate. It supports interaction with two file types, .tlog and .mav. The tlog is a well known informat method for logging mavlink messages and mav is a better documented modern version of the tlog file. For each file type, this crate supports logging and parsing to/from that format.
+This is the initial release of the mavlink log crate. It supports interaction with two file types, .tlog and .mav. The tlog is a well known format for logging mavlink messages and mav is a better documented modern version of the tlog file. For each file type, this crate supports logging and parsing to/from that format.
 
 For more information it is encouraged you check out the markdown files in the docs folder.
